<resources>
    <string name="app_name">Рецептики</string>
    <string name="lang_ru">Русский</string>
    <string name="lang_en">Английский</string>
    <string name="lang_es">Испанский</string>
    <string name="btn_lang"> ВЫБРАТЬ ЯЗЫК </string>
    <string name="btn_filter_type">Фильтр по типу</string>
    <string name="btn_filter_name"> Фильтр по имени</string>
    <string name="start_timer">Запустить таймер</string>
    <string name="end_timer">Остановить</string>
    <string name="sec">сек.</string>
    <string name="remain">Осталось</string>
    <string name="steps">Шаги: </string>
    <string name="bon_appetite"> Приятного аппетита!</string>
    <string name="start_receipt">Прослушать рецепт</string>
    <string name="receipt_easy">Простая</string>
    <string name="receipt_mid">Средняя</string>
    <string name="receipt_hard">Сложно</string>
    <string name="ingidients"> Ингридиенты</string>
    <string name="receipt_card_name">Название</string>
    <string name="receipt_card_time">Время приготовления</string>
    <string name="receipt_card_difficult">Сложность</string>
    <string name="receipt_card_type">Тип блюда</string>
    <string name="borcht_name"> Борщт </string>
    <string name="borcht_time"> 5 часов </string>
    <string name="olady_name">Оладушки от бабушки</string>
    <string name="sirniks">Сырники</string>
    <string name="deflope">Дефлопе из палабы с семечками кациуса</string>
    <string name="time_day">24 часа</string>
    <string name="time_half">30 минут</string>
    <string name="type_soup"> Суп </string>
    <string name="type_breakfast"> Завтрак </string>
    <string name="type_delicates"> Деликатес </string>
    <string name="difficult_easy"> Просто </string>
    <string name="difficult_middle"> Средне </string>
    <string name="difficult_hard"> Сложно </string>
    <string name="difficult_extra_hard"> Очень сложно </string>


    <string name="steps_for_sirnik">
        "1.В большой миске смешайте творог, яйца, сахар, ванильный экстракт (если используете) и щепотку соли. Хорошо перемешайте, пока не получится однородная масса.\n" +
        "2.Постепенно добавляйте пшеничную муку, продолжая перемешивать, пока тесто не станет густым и сможет держать форму.\n" +
        "3.Разогрейте сковороду с подсолнечным маслом на среднем огне.\n" +
        "4.Сформируйте небольшие шарики из творожного теста и немного приплюсните их, чтобы они стали похожи на сырники.\n" +
        "5.Обваляйте каждый сырник в небольшом количестве муки, чтобы он не прилипал к сковороде и придали сырникам аппетитную корочку.\n" +
        "6.Выложите сырники на разогретую сковороду и жарьте их по 2-3 минуты с каждой стороны, пока они не станут золотистыми и не прожарятся.\n" +
        "7.После жарки выложите готовые сырники на бумажное полотенце, чтобы удалить лишнее масло.\n" +
        "8.Подавайте сырники горячими, посыпанными сахарной пудрой и с добавлением свежих фруктов, ягод или варенья по желанию."
    </string>

    <string name="ingridients_for_sirnik">
        "•500 г творога (можно использовать обезжиренный или полужирный)\n" +
        "•2 яйца\n" +
        "•4 столовые ложки сахара\n" +
        "•1 чайная ложка ванильного экстракта (по желанию)\n" +
        "•По 3-4 столовые ложки пшеничной муки\n" +
        "•Щепотка соли\n" +
        "•Подсолнечное масло для жарки"
    </string>

    <string name="ingridients_for_olady">
        "• 1 крупное яйцо\n" +
        "• 1 стакан (около 200 мл) молока\n" +
        "• 1 стакан (около 120-150 г) муки\n" +
        "• 2 столовые ложки сахара\n" +
        "• 1 чайная ложка разрыхлителя (пекарского порошка)\n" +
        "• Щепотка соли\n" +
        "• Подсолнечное масло для жарки\n" +
        "• Дополнительные ингредиенты по желанию: ягоды, нарезанные фрукты, изюм, орехи и т.д."
    </string>

    <string name="steps_for_olady">
        "1. В миске взбейте яйцо вилкой или миксером до образования однородной массы.\n" +
        "2. Добавьте молоко и взбивайте до того момента, пока молоко и яйцо хорошо не смешаются.\n" +
        "3. Постепенно добавляйте муку, продолжая взбивать, чтобы избежать образования комков.\n" +
        "4. Добавьте сахар, разрыхлитель и щепотку соли. Взбивайте тесто до тех пор, пока оно не станет гладким и однородным.\n" +
        "5. Дайте тесту постоять в течение 10-15 минут, чтобы мука немного набухла.\n" +
        "6. Разогрейте сковороду на среднем огне и добавьте немного подсолнечного масла.\n" +
        "7. Вылейте небольшое количество теста на сковороду, чтобы сформировать оладьи нужного размера (обычно около 1/4 стакана теста на одну оладью).\n" +
        "8. Жарьте оладьи с одной стороны до появления пузырьков на поверхности и золотистого цвета снизу, затем переверните их и жарьте с другой стороны.\n" +
        "9. Повторяйте процесс с оставшимся тестом, добавляя подсолнечное масло на сковороду по мере необходимости.\n" +
        "10. После жарки выложите оладьи на бумажное полотенце, чтобы удалить лишнее масло.\n" +
        "11. Подавайте оладьи горячими с медом, сиропом, свежими ягодами, фруктами или сахарной пудрой по желанию."
    </string>

    <string name="steps_for_deflope">
"1. Подготовьте палабу, очистите ее от кожуры и нарежьте на тонкие ломтики.\n" +
"2. В глубокой миске взбейте яйца вилкой. Добавьте молоко, муку, сахар, ванильный экстракт и щепотку соли. Хорошо перемешайте, чтобы получилось однородное тесто без комков.\n" +
"3. Обваляйте ломтики палабы в получившемся тесте, чтобы они были равномерно покрыты.\n" +
"4. Разогрейте сковороду с подсолнечным маслом на среднем огне.\n" +
"5. Обжарьте обвалянные в тесте ломтики палабы с обеих сторон до золотистого цвета и готовности.\n" +
"6. После того как ломтики палабы будут готовы, выложите их на тарелку.\n" +
"7. Посыпьте сверху готовые дефлопе семечками кациуса для добавления текстуры и аромата.\n" +
"8. Подавайте дефлопе из палабы с семечками кациуса горячими как основное блюдо или десертом, посыпанными сахарной пудрой и с добавлением свежих фруктов или ягод по желанию."
    </string>

    <string name="ingidients_for_deflope">
        "• 500 г палабы\n" +
        "• 100 г семечек кациуса\n" +
        "• 2 яйца\n" +
        "• 100 мл молока\n" +
        "• 50 г муки\n" +
        "• 50 г сахара\n" +
        "• 1 ч. ложка ванильного экстракта\n" +
        "• Щепотка соли\n" +
        "• Подсолнечное масло для жарки"
    </string>

    <string name="steps_for_borsht">
        "1. Нарежьте говядину на куски среднего размера. Положите мясо в большую кастрюлю и залейте холодной водой так, чтобы мясо было полностью покрыто. Доведите до кипения, затем уменьшите огонь и варите на медленном огне до мягкости мяса (обычно около 1-1,5 часов). Удаляйте пену, образующуюся на поверхности кастрюли. \n" +
                "\n"+
                "2. В то время как мясо варится, подготовьте овощи. Очистите и нарежьте свёклу, картофель, лук и морковь. Также нарежьте капусту и мелко нарежьте чеснок.\n"+
                "3. Когда мясо почти готово, добавьте нарезанные свёклу и картофель в кастрюлю. Варите до тех пор, пока овощи не станут мягкими.\n"+
                "4. В отдельной сковороде обжарьте нарезанный лук и морковь до мягкости и золотистого цвета. Добавьте томатную пасту и обжаривайте ещё несколько минут.\n"+
                "5. Добавьте обжаренные лук и морковь в кастрюлю с бульоном и овощами. Добавьте также нарезанную капусту и чеснок.\n"+
                "6. Продолжайте варить борщ на среднем огне ещё около 10-15 минут, чтобы все вкусы соединились.\n"+
                "7. После этого добавьте соль, перец и уксус по вкусу. Регулируйте количество уксуса в зависимости от предпочтений.\n"+
                "8. Подавайте борщ горячим, украсив каждую порцию сметаной и свежей зеленью по желанию. Подаётся борщ обычно с черным хлебом или пампушками.\n"
    </string>
    <string name="ingridients_for_bosht">
        "• 500 г говядины \n" +
                "• 2-3 крупных свёклы\n"+
                "• 2-3 средних картофелины\n"+
                "• 1 большая луковица\n"+
                "• 1-2 моркови\n"+
                "• 1/4 капусты\n"+
                "• 2-3 зубчика чеснока\n"+
                "• 2-3 столовые ложки томатной пасты\n"+
                "• 2-3 лавровых листа\n"+
                "• Соль и перец по вкусуа\n"+
                "• Уксус по вкусу\n"+
                "• Сметана и зелень для подачи"
    </string>
</resources>