<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >
        <ImageView
            android:id="@+id/receipt_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/placeholder"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginStart="20dp">

            <TextView
                android:id="@+id/receipt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/receipt_card_name">

            </TextView>

            <TextView
                android:id="@+id/receipt_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/receipt_card_time">

            </TextView>
            <TextView
                android:id="@+id/receipt_difficult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/receipt_card_difficult">

            </TextView>
            <TextView
                android:id="@+id/receipt_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/receipt_card_type">

            </TextView>
            <Button
                android:id="@+id/button_to_receipt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Перейти ==>">

            </Button>
        </LinearLayout>

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>